[tool.poetry]
name = "fastapi-2fa"
version = "0.1.0"
description = ""
authors = ["dfm88 <diegof.university@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_2fa"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
passlib = {extras = ["bycrypt"], version = "^1.7.4"}
pytest = "^7.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
celery = "^5.2.7"
pydantic = {extras = ["email"], version = "^1.10.2"}
ipdb = "^0.13.9"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
python-multipart = "^0.0.5"
pytest-cov = "^4.0.0"
factory-boy = "^3.2.1"
pyotp = "^2.7.0"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
uvicorn = "^0.20.0"
nest-asyncio = "^1.5.6"
fernet = "^1.0.1"
qrcode = {extras = ["pil"], version = "^7.3.1"}
pillow = "^9.3.0"
redis = "^4.3.5"
flower = "1.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
